MDX-3279, support route MDX